2013-03-26  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* AudioClip.wrl:
	* 04. Like A Virgin.mp3: 

2013-03-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Background.wrl:
	* ImageBackground.wrl: 

2013-03-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Canvas.wrl:
	* Dashboard.wrl: 

2013-03-25  Holger Seelig  <holger.seelig@yahoo.de>

	* CylinderSensor.wrl: 

2013-03-25  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* PlaneSensor.wrl:
	* SphereSensor.wrl:
	* CylinderSensor.wrl: 

2013-03-23  Holger Seelig  <holger.seelig@yahoo.de>

	* SphereSensor.wrl: 

2013-03-23  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* SphereSensor.wrl: 

2013-03-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* TouchSensor.wrl:
	* Status_proto.wrl:
	* PlaneSensor.wrl:
	* Slider_proto.wrl: 

2013-03-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Canvas.wrl: 

2013-03-19  Holger Seelig  <holger.seelig@yahoo.de>

	* Water2.wrl:
	* ComposedShader.wrl: 

2013-03-18  Holger Seelig  <holger.seelig@yahoo.de>

	* TouchSensor.wrl: 

2013-03-18  Holger Seelig  <holger.seelig@yahoo.de>

	* TouchSensor.wrl: 

2013-03-18  Holger Seelig  <holger.seelig@yahoo.de>

	* TouchSensor.wrl: 

2013-03-17  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Toon.wrl:
	* Phong.wrl:
	* Water2.wrl:
	* Beethoven.wrl:
	* TouchSensor.wrl:
	* lostvalley_up.png:
	* ComposedCubeMapTexture.wrl: 

2013-03-16  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Water2.wrl:
	* lostvalley_up.png:
	* lostvalley_east.png:
	* lostvalley_down.png:
	* TextureCoordinateGenerator.wrl:
	* lostvalley_west.png:
	* lostvalley_south.png:
	* lostvalley_north.png:
	* TextureCoordinateGenerator.wrl:
	* lostvalley_up.png:
	* lostvalley_down.png:
	* lostvalley_east.png:
	* ComposedCubeMapTexture.wrl:
	* lostvalley_west.png:
	* lostvalley_south.png:
	* lostvalley_north.png: 
