@@ -1,3 +1,7 @@
+2013-03-26  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Sphere3.h: 
+
 2013-03-25  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Makefile.am:
