@@ -1,5 +1,9 @@
 2013-03-26  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* AudioClip.wrl: 
+
+2013-03-26  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Library.mdproj:
 	* AudioClip.wrl:
 	* 04. Like A Virgin.mp3: 
